--- a/src/assets/annotorious/css/annotorious.css
+++ b/src/assets/annotorious/css/annotorious.css
@@ -27,11 +27,11 @@
 
 .annotorious-hint-msg {
   background-color:rgba(0,0,0,0.5);
-  margin:4px;
-  padding:8px 15px 8px 30px;
+  margin:0px;
+  padding:0px;
   font-family: 'lucida grande',tahoma,verdana,arial,sans-serif;
   line-height: normal;
-  font-size:12px;
+  font-size:0px;
   color:#fff;
   border-radius:4px;
   -moz-border-radius:4px;
@@ -45,8 +45,8 @@
   left: 5px;
   background:url('feather_icon.png');
   background-repeat:no-repeat;
-  width:19px;
-  height:22px;
+  width:0px;
+  height:0px;
   margin:2px 4px 0px 6px;
 }
 
