--- a/src/app/upload/upload.component.html
+++ b/src/app/upload/upload.component.html
@@ -180,6 +180,11 @@
              [(ngModel)] = "leafvalues.Disease" name = "Disease">
     </div>
     <div class = "form-group">
+      <label for = "location">Location</label>
+      <input type = "text" class = "form-control" id = "scientificName" required
+             [(ngModel)] = "leafvalues.location" name = "location">
+    </div>
+    <div class = "form-group">
       <label for = "Description">Description</label>
       <input type = "text" class = "form-control" id = "Description" required
              [(ngModel)] = "leafvalues.Description" name = "Description">
