--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,9 @@
       <li><a [routerLink]="['upload']">Upload</a></li>
     </ul>
     <ul class="nav navbar-nav" >
+      <li><a [routerLink]="['unknown']" *ngIf="checkifexpert() || checkifadmin()">Unknown Leaves</a></li>
+    </ul>
+    <ul class="nav navbar-nav" >
       <li><a [routerLink]="['manage']" *ngIf="checkifadmin()">Manage Users</a></li>
     </ul>
     <ul class="nav navbar-nav" style="float: right">
