--- a/src/app/unknown/unknown.component.html
+++ b/src/app/unknown/unknown.component.html
@@ -1,5 +1,5 @@
 	<h1 class ="text-center"> Unknown Leaves </h1>
-<div class="col-sm-3 col-md-3 edit-list">
+<div class="col-sm-3 col-md-3 edit-list" *ngIf = "items?.length">
   <h2> Mark and add species details! </h2>
   <form ngNativeValidate>
     <div class = "form-group">
