--- a/src/app/manageusers/manageusers.component.css
+++ b/src/app/manageusers/manageusers.component.css
@@ -1,6 +1,3 @@
-button{
-	padding: 1px;
-}
 select{
 	display: inline;
 }
@@ -10,6 +7,82 @@ select{
 table{
 	margin-top: 10vh;
 }
+.card {
+  font-size: 1em;
+  overflow: hidden;
+  padding: 0;
+  border: none;
+  width: 300px;
+  border-radius: .28571429rem;
+  box-shadow: 0 1px 3px 0 #d4d4d5, 0 0 0 1px #d4d4d5;
+  display: inline-block;
+  float: left;
+}
+
+.card-block {
+  font-size: 1em;
+  position: relative;
+  margin: 0;
+  padding: 1em;
+  border: none;
+  border-top: 1px solid rgba(34, 36, 38, .1);
+  box-shadow: none;
+}
+
+.card-img-top {
+  display: block;
+  max-width: 100%;
+  max-height: 250px;
+  margin: auto;
+}
+
+.card-title {
+  font-size: 1.28571429em;
+  font-weight: 700;
+  line-height: 1.2857em;
+}
+
+.card-text {
+  clear: both;
+  margin-top: .5em;
+  color: rgba(0, 0, 0, .68);
+}
+
+.card-footer {
+  text-align: center;
+  font-size: 1em;
+  position: static;
+  top: 0;
+  left: 0;
+  max-width: 100%;
+  padding: .75em 1em;
+  color: rgba(0, 0, 0, .4);
+  border-top: 1px solid rgba(0, 0, 0, .05) !important;
+  background: #fff;
+}
+
+.card-inverse .btn {
+  border: 1px solid rgba(0, 0, 0, .05);
+}
+figure {
+    display: inline-block;
+    margin: 20px 15px;
+    float:left;
+    text-align: center;
+    border: 1px black;
+    border-style: solid;
+    width: 15.1vw;
+    height: 18.2vh;
+}
+figure img{
+  width: 15vw;
+  height: 18vh;
+}
+
+figure figcaption {
+  padding: 2px;
+  word-wrap: break-word;
+  }
 .glyphicon {
       pointer-events: all;
     }
